--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ ADMIN_PASS=your_admin_password
 
 # 直播流重定向URL
 REDIRECT_URL=http://your-iptv-source-url/playlist.m3u
+
+# 过期或无效令牌重定向URL
+EXPIRED_REDIRECT_URL=http://your-iptv-source-url/expired.m3u
