--- a/.env.example
+++ b/.env.example
@@ -6,18 +6,12 @@ DB_DSN_MYSQL=mysql:host=mysql;dbname=iptv;charset=utf8mb4
 DB_USER_MYSQL=your_mysql_user
 DB_PASS_MYSQL=your_mysql_password
 
-# MySQL容器配置
-MYSQL_DATABASE=iptv
-MYSQL_USER=iptv_user
-MYSQL_PASSWORD=changeme
-MYSQL_ROOT_PASSWORD=root_changeme
-
 # 管理员账号
 ADMIN_USER=admin
 ADMIN_PASS=your_admin_password
 
-# 直播流重定向URL
-REDIRECT_URL=http://your-iptv-source-url/playlist.m3u
+# 直播流重定向域名 (token验证成功后会重定向到此域名/{t}/playlist.m3u，如果没有t参数则重定向到域名/playlist.m3u)
+REDIRECT_URL=http://your-iptv-source-domain
 
 # 过期或无效令牌重定向URL
 EXPIRED_REDIRECT_URL=http://your-iptv-source-url/expired.m3u
